# ocr-bifunction

./: .gitignore  CADRAGE.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  api_maquette.py  api_smoke_async.py  api_smoke_real.py  async_type_mismatch_smoke.py  batch_check.py  checks_check.py  ci_geometry_fingerprint.py  ci_submission_check.py  conformity_smoke.py  consolidation_check.py  context_checks_check.py  contrat_check.py  contrat_graph_check.py  conversion_guard_smoke.py  corroboration_smoke.py  draft_check.py  draft_smoke.py  escalation_reject_smoke.py  extract.py  facture_check.py  facture_validation_smoke.py  field_correction_smoke.py  field_naming_check.py  field_provenance_smoke.py  flow_smoke.py  gbnf_diag.py  handler_check.py  holder_reference_smoke.py  hp_check.py  image_dominance_observer_run.py  image_dominance_smoke.py  load_smoke.py  main.py  (+31 more)
.githooks/: pre-commit
docs/: analyse-tag-ingestion.md  contrat-bd-destination.md  deploiement-linux-serving-slm.md  dictionnaire-metier.md  lecture-moteurs-paysage.md  moteur-escalade-lightonocr.md  outils-evalues.md  playbook-encodage.md
ocr_bifunction/: __init__.py  capacity_settings.py  conformity_policy.py  context_assembly.py  conversion_guard.py  docling_engine.py  docling_page_range_converter.py  drafting.py  drafting_flow.py  execution_policy.py  field_naming.py  generation.py  identity_key.py  intake.py  issuer_registry.py  lightonocr_engine.py  llama_transport.py  mrz.py  orchestrator.py  paths.py  pipeline.py  preprocess.py  promotion.py  rag.py  rapidocr_engine.py  reader.py  reconcile.py  reference_graph.py  repository.py  resilient_conversion.py  review_repository.py  router.py  store.py  suggestion.py  table_corroboration.py  template.py  template_repository.py  text_integrity_guard.py  use_case_key.py  validation.py  (+1 more)
proofs/: api_smoke_async.py  api_smoke_real.py  async_type_mismatch_smoke.py  batch_check.py  checks_check.py  ci_geometry_fingerprint.py  (+50 more)
(+69 files in other folders)
