[project]
name = "ocr-bifunction"
version = "0.3.0"
description = "Bi-mode document intake — read, categorise, auto-validate the confident, escalate the doubtful"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "docling>=2.107.0",
    "ftfy>=6.3.1",
    "pdfplumber>=0.11.10",
    "onnxruntime>=1.27.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "rapidocr>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The package is installed EDITABLE by uv, which is what makes `import ocr_bifunction`
# work from proofs/ and from the adapters while the source stays in the repo (and so
# `paths.PROJECT_ROOT` keeps resolving to the repo root).
[tool.hatch.build.targets.wheel]
packages = ["ocr_bifunction"]

[dependency-groups]
dev = [
    "fastapi>=0.138.1",
    "ruff>=0.15.20",
    "uvicorn[standard]>=0.49.0",
]
